tui/tests/snapshots/notebook_inproc__keymap_shown_inproc.snap
---
source: tui/tests/notebook_inproc.rs
expression: text
snapshot_kind: text
---
 Directory 'Notes' selected                                                                            [?] Hide keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues :D         General                                     
   󱇗 Sample Note                            ▐                               [l]       Toggle directory                  
                                            ▐                               [h]       Close parent directory            
                                            ▐                               [j]       Select next                       
                                            ▐                               [k]       Select previous                   
                                            ▐                               [J]       Select next directory             
                                            ▐                               [K]       Select previous directory         
                                            ▐                               [G]       Select last                       
                                            ▐                               [1-9]     Add steps                         
                                            ▐                               [>]       Expand width                      
                                            ▐                               [<]       Shrink width                      
                                            ▐                               [Space]   Move directory                    
                                            ▐                               [m]       Show more actions                 
                                            ▐                               [Esc]     Quit                              
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
