tui/tests/snapshots/notebook_inproc__note_actions_open_inproc.snap
---
source: tui/tests/notebook_inproc.rs
expression: text
snapshot_kind: text
---
 Note actions dialog                                                                                   [?] Show keymap 
[Browser]                                   ▐[Editor]                                                                   
 󰝰 Notes                                    ▐ 1 Welcome to Glues :D                                                     
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ ┌───────Note Actions───────┐                                              
                                            ▐ │                          │                                              
                                            ▐ │   Rename note            │                                              
                                            ▐ │   Remove note            │                                              
                                            ▐ │   Close                  │                                              
                                            ▐ │                          │                                              
                                            ▐ └──────────────────────────┘                                              
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐
